@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
 
+PIG-4379: Make RoundRobinPartitioner public (daijy)
+
 PIG-4378: Better way to fix tez local mode test hanging (daijy)
 
 PIG-4358: Add test cases for utf8 chinese in Pig (nmaheshwari via daijy)
